Update backend: SecurityConfig and application.properties